--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-  <div class="container vh-100 pt-5">
+  <div class="container pt-5">
     <owl-carousel-o class="owl-centered " [options]="customOptions" >
       <ng-container *ngFor="let item of data">
       <ng-template carouselSlide>
