--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container">
+  <div class="container-sm">
     <a class="navbar-brand" href="#"><img src="assets/images/mtn_logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto ml-5 mr-5">
         <li class="nav-item">
           <a class="nav-link text-dark" href="https://wegotu.mtn.co.za/">Store</a>
         </li>
