--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,9 @@ body {
   top: 0;
 }
 
+.container {
+  max-width: 1180px !important
+}
 
 .btn-start {
   text-align: center;
@@ -42,7 +45,7 @@ a {
 }
 
 .img-placeholder img {
-  height:160px;
+  height:150px;
   object-fit: cover;
 }
 
@@ -64,9 +67,11 @@ a {
     position: relative;
   box-sizing: border-box;
   border: 2px solid rgba(150,150,150,0.08);
-  border-radius: 8px;
+  border-radius: 16px 16px 12px 12px;
   background: linear-gradient(180deg, #FFFFFF 0%, #EBEBEB 100%);
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0px 8px 7px -4px rgba(0,0,0,0.54);
+  -moz-box-shadow: 0px 8px 7px -4px rgba(0,0,0,0.54);
+  box-shadow: 0px 8px 7px -4px rgba(0,0,0,0.54);
 }
 
 .owl-carousel .owl-item:not(.center) .btn-start{
@@ -76,7 +81,7 @@ a {
 .owl-carousel .owl-item:not(.center) {
   transform: scale(0.7);
   -ms-transform: scale(0.8);
-  margin: 0 -10px;
+
 }
 
 .owl-carousel .owl-item.center {
@@ -87,9 +92,11 @@ a {
   border-bottom-style: solid;
   border-bottom-width: 5px;
   border-bottom-color: #FFC000;
-  border-radius: 16px 16px 12px 12px;
+
+  box-shadow:none;
   opacity: 1;
   z-index: 3;
+
 }
 
 .owl-carousel .owl-item.center .item-title{
